// Extracted from: Spotify 1.1.61.583 (Windows)

syntax = "proto2";

package spotify.event_sender.proto;

option optimize_for = CODE_SIZE;

message AdError {
    optional string request_type = 1;
    optional string error_message = 2;
    optional int64 http_error_code = 3;
    optional string request_url = 4;
    optional string tracking_event = 5;
}
