// Extracted from: Spotify 1.1.61.583 (Windows)

syntax = "proto2";

package spotify.event_sender.proto;

option optimize_for = CODE_SIZE;

message ConnectCredentialsRequest {
    optional string token_type = 1;
    optional string client_id = 2;
}
