// Extracted from: Spotify 1.1.61.583 (Windows)

syntax = "proto2";

package spotify.event_sender.proto;

option optimize_for = CODE_SIZE;

message PlaybackError {
    optional bytes file_id = 1;
    optional bytes playback_id = 2;
    optional string track_id = 3;
    optional int64 bitrate = 4;
    optional int64 error_code = 5;
    optional bool fatal = 6;
    optional string audiocodec = 7;
    optional bool external_track = 8;
    optional int64 position_ms = 9;
}
