// Extracted from: Spotify 1.1.61.583 (Windows)

syntax = "proto3";

package spotify.corex.transcripts.metadata;

option objc_class_prefix = "SPT";
option java_multiple_files = true;
option optimize_for = CODE_SIZE;
option java_outer_classname = "TranscriptMetadataProto";
option java_package = "com.spotify.corex.transcripts.metadata.proto";

message EpisodeTranscript {
    string episode_uri = 1;
    repeated Transcript transcripts = 2;
}

message Transcript {
    string uri = 1;
    string language = 2;
    bool curated = 3;
    string cdn_url = 4;
}
